# iferaopt

./: .gitignore  AGENTS.md  TODO.md  planning_discussion.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
iferaopt/: data_preprocess.py  feature_selection.py  gpu_backtester.py  metrics.py  purged_cv.py  storage.py  wfo_runner.py
tests/: test_placeholder.py  test_storage.py
