[project]
name = "iferaopt"
version = "0.1.0"
description = "0DTE option strategy optimizer with GPU-accelerated walk-forward analysis"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
